--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   overflow-x: hidden;
   height: max-content;
-  width: 100%
+  width: 100%;
 }
 
 .css-1g92jzo-MuiPaper-root-MuiAccordion-root:first-of-type
