--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@
   width: 100%;
 }
 
+.css-1a7967t{
+  box-shadow: none !important;
+}
+
+.css-17o5nyn{
+  border-radius: 20px !important;
+}
+
 .css-1g92jzo-MuiPaper-root-MuiAccordion-root:first-of-type
 {
   border-radius: 20px !important;
