--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 #root, body, html {
   margin: 0;
-  overflow-x: hidden;
   height: max-content;
   width: 100%;
+  position: relative;
 }
 
 .css-1a7967t{
