--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,10 @@
 }
 
 .swiper {
-  width: 280px;
-  height: 420px;
-  margin-left: 0px !important;
-  margin-right: 0px !important;
+  width: 384px;
+  height: 576px;
+  margin-left: 3rem !important;
+  margin-right: 3rem !important;
 }
 
 .swiper-slide {
